src/test/ui/error-codes/E0192.stderr
error[E0192]: negative impls are only allowed for auto traits (e.g., `Send` and `Sync`)
  --> $DIR/E0192.rs:9:1
   |
LL | impl !Trait for Foo { }
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0192`.
